--- a/wifi/etc/hostapd/hostapd.conf
+++ b/wifi/etc/hostapd/hostapd.conf
@@ -1,17 +1,15 @@
 # minimal opened access point configuration
 
 # interface wlan du Wi-Fi
-interface=wlan0
+interface=myAP
 # nl80211 avec tous les drivers Linux mac80211
-driver=nl80211
+#driver=nl80211
 # Nom du spot Wi-Fi
 ssid=ScoreBoard
 # Le mode Wi-Fi (a = IEEE 802.11a, b = IEEE 802.11b, g = IEEE 802.11g)
 hw_mode=g
 # canal de fréquence Wi-Fi (1-14)
 channel=6
-# Wi-Fi ouvert, pas d'authentification !
-auth_algs=1
 # Beacon interval in kus (1.024 ms)
 beacon_int=100
 # DTIM (delivery trafic information message)
@@ -22,4 +20,12 @@ max_num_sta=255
 rts_threshold=2347
 # Fragmentation threshold; 2346 = disabled (default)
 fragm_threshold=2346
+
+
+auth_algs=1
+wpa=2
+wpa_passphrase=password
+wpa_key_mgmt=WPA-PSK
+wpa_pairwise=CCMP
+rsn_pairwise=CCMP
 
