update/fix wifi portal config

--- a/wifi/etc/dnsmasq.conf
+++ b/wifi/etc/dnsmasq.conf
@@ -15,7 +15,8 @@
 # The example below send any host in double-click.net to a local
 # web-server.
 #address=/double-click.net/127.0.0.1
-address=/#/192.168.42.1
+address=/scoreboard/192.168.42.1
+address=/sb/192.168.42.1
 
 # If you want dnsmasq to listen for DHCP and DNS requests only on
 # specified interfaces (and the loopback) give the name of the
@@ -61,6 +62,7 @@ dhcp-range=192.168.42.50,192.168.42.150,12h
 
 # Do the same thing, but using the option name
 #dhcp-option=option:router,1.2.3.4
+dhcp-option=option:dns-server,192.168.42.1
 
 # Send DHCPv6 option. Note [] around IPv6 addresses.
 #dhcp-option=option6:dns-server,[1234::77],[1234::88]
