--- a/wifi/etc/hostapd/hostapd.conf
+++ b/wifi/etc/hostapd/hostapd.conf
@@ -2,30 +2,42 @@
 
 # interface wlan du Wi-Fi
 interface=myAP
-# nl80211 avec tous les drivers Linux mac80211
-#driver=nl80211
+
 # Nom du spot Wi-Fi
 ssid=ScoreBoard
+
+# nl80211 avec tous les drivers Linux mac80211
+#driver=nl80211
+
+#ieee80211n=1          # 802.11n support
+#wmm_enabled=1         # QoS support
+#ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40]
+
+
 # Le mode Wi-Fi (a = IEEE 802.11a, b = IEEE 802.11b, g = IEEE 802.11g)
 hw_mode=g
 # canal de fréquence Wi-Fi (1-14)
 channel=6
+
+#macaddr_acl=0
+#ignore_broadcast_ssid=0
+
 # Beacon interval in kus (1.024 ms)
-beacon_int=100
+#beacon_int=100
 # DTIM (delivery trafic information message)
-dtim_period=2
+#dtim_period=2
 # Maximum number of stations allowed in station table
-max_num_sta=255
+#max_num_sta=255
 # RTS/CTS threshold; 2347 = disabled (default)
-rts_threshold=2347
+#rts_threshold=2347
 # Fragmentation threshold; 2346 = disabled (default)
-fragm_threshold=2346
+#fragm_threshold=2346
 
 
 auth_algs=1
 wpa=2
 wpa_passphrase=password
 wpa_key_mgmt=WPA-PSK
-wpa_pairwise=CCMP
+#wpa_pairwise=CCMP
 rsn_pairwise=CCMP
 
